<!--
  ~ Copyright 2019 Andrius Baruckis www.baruckis.com
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">"CryptoLive"</string>
    <string name="app_subtitle">"BTC/USD"</string>

    <string name="ticker_title">"👓 Ticker"</string>
    <string name="order_books_title">"📚 Order Books"</string>

    <string name="ticker_price">"Price: "</string>
    <string name="ticker_volume">"Volume: "</string>
    <string name="ticker_low">"Low: "</string>
    <string name="ticker_high">"High: "</string>

    <string name="tools_ticker_price">"Price: 5125.13726932"</string>
    <string name="tools_ticker_volume">"Volume: 7704.0071242300000006"</string>
    <string name="tools_ticker_low">"Low: 5049.30627064"</string>
    <string name="tools_ticker_high">"High: 5163.0"</string>

    <string name="table_title_bid_amount">"Bid amount"</string>
    <string name="table_title_bid_price">"Bid price"</string>
    <string name="table_title_ask_price">"Ask price"</string>
    <string name="table_title_ask_amount">"Ask amount"</string>

</resources>
