<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2019 Andrius Baruckis www.baruckis.com
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.main.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding_default"
            android:paddingBottom="@dimen/padding_default">

            <TextView
                android:id="@+id/ticker_title"
                style="@style/AppTheme.TitleTextView"
                android:text="@string/ticker_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardview"
                style="@style/AppTheme.CardStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ticker_title">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraint_layout_cardview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/margin_default"
                    android:layout_marginBottom="@dimen/margin_default"
                    android:padding="@dimen/padding_default">

                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/guideline_start"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintGuide_percent="0.10" />

                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/guideline_end"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintGuide_percent="0.90" />

                    <TextView
                        android:id="@+id/price"
                        style="@style/AppTheme.TickerTextView"
                        android:text="@string/ticker_price"
                        app:layout_constraintEnd_toStartOf="@id/guideline_end"
                        app:layout_constraintStart_toStartOf="@id/guideline_start"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="@string/tools_ticker_price" />

                    <TextView
                        android:id="@+id/volume"
                        style="@style/AppTheme.TickerTextView"
                        android:text="@string/ticker_volume"
                        app:layout_constraintEnd_toStartOf="@id/guideline_end"
                        app:layout_constraintStart_toStartOf="@id/guideline_start"
                        app:layout_constraintTop_toBottomOf="@+id/price"
                        tools:text="@string/tools_ticker_volume" />

                    <TextView
                        android:id="@+id/low"
                        style="@style/AppTheme.TickerTextView"
                        android:text="@string/ticker_low"
                        app:layout_constraintEnd_toStartOf="@id/high"
                        app:layout_constraintStart_toStartOf="@id/guideline_start"
                        app:layout_constraintTop_toBottomOf="@+id/volume"
                        tools:text="@string/tools_ticker_low" />

                    <TextView
                        android:id="@+id/high"
                        style="@style/AppTheme.TickerTextView"
                        android:text="@string/ticker_high"
                        app:layout_constraintBaseline_toBaselineOf="@id/low"
                        app:layout_constraintEnd_toStartOf="@id/guideline_end"
                        app:layout_constraintStart_toEndOf="@+id/low"
                        tools:text="@string/tools_ticker_high" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <Space
                android:id="@+id/spacer"
                android:layout_width="match_parent"
                android:layout_height="@dimen/padding_default"
                app:layout_constraintTop_toBottomOf="@id/cardview" />

            <fragment
                android:id="@+id/fragment"
                android:name="com.baruckis.cryptolive.ui.main.MainFragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/spacer"
                tools:layout="@layout/fragment_main" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>